--- a/css/frontend.css
+++ b/css/frontend.css
@@ -6687,10 +6687,10 @@ table.forcontent td{
   #piece14 .piece-bg #holder-labels{
     width: 340px;
     margin-left: -60px;
-    margin-top: 0;
+    margin-top: -20px;
   }
   #piece14 .piece-bg #holder-labels img{
-    width: 100%;
+    width: auto;
     height: auto;
   }
   #piece14 .piece-bg>div:nth-child(2){
